# autobird

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  README.md  cloudbuild.yaml  config_cpu.yaml  config_gpu.yaml  config_gpu_parallel.yaml  data-bash.sh  data.dockerfile  drift.dockerfile  inference_api.dockerfile  prediction_database.csv  pyproject.toml  struc.sh  tasks.py  train-bash.sh  train.dockerfile
.dvc/: config
.github/: dependabot.yaml
.github/workflows/: codecheck.yaml  docker-publish.yaml  loadtesting.yaml  tests.yaml
api/: inference_api.dockerfile  simple_fastapi_app.dockerfile
api/app/: inference.py  prediction_database.csv
api/drift_api/: drift.dockerfile  drift.py
configs/: config.yaml
configs/data/: data_config.yaml
configs/ddp/: runtime.yaml
configs/hyperparams/: hyperparam.yaml
configs/optimizer/: adam.yaml
configs/pathing/: path_config.yaml
configs/prof/: profiler_config.yaml
configs/scheduler/: step.yaml
configs/train/: hyperparam.yaml  optimizer.yaml
configs/wandb/: sweep.yaml
data/: processed.dvc  species_names.txt
data/processed/: labels.json  test_group.json  train_group.json  train_mean.pt  train_std.pt  train_y.pt  val_group.json  val_y.pt
docker/: data.dockerfile  train.dockerfile
models/checkpoints/: best_metric.json
notebooks/: test_data.ipynb  test_model.ipynb  test_models.ipynb
reports/: README.md  data_profiler.prof  report.py  train_profiler.prof
reports/eval_metrics/: eval_metrics.txt
reports/torch_prof/: mac.students.clients.local_16870.1769165852712722000.pt.trace.json  mac.students.clients.local_17489.1769165916912608000.pt.trace.json  mac.students.clients.local_2714.1769162497057713000.pt.trace.json  mac.students.clients.local_33925.1769169106537108000.pt.trace.json  mac.students.clients.local_90089.1769160041398956000.pt.trace.json  mac.students.clients.local_98336.1769161700552358000.pt.trace.json
src/: readme.md
src/call_of_birds_autobird/: data.py  evaluate.py  model.py  test.py  train.py  visualize.py
src/call_of_func/: __init__.py  train_helper.py
tests/: __init__.py  test_api.py  test_data.py  test_model.py  test_train.py
tests/performancetests/: create_dummy_wav.py  locustfile.py
wandb/: latest-run
wandb/run-20260117_153438-61o1wwep/: run-61o1wwep.wandb
wandb/run-20260119_104426-v7wd2iqt/: run-v7wd2iqt.wandb
wandb/run-20260119_104819-m4yju56f/: run-m4yju56f.wandb
wandb/run-20260119_105043-q8ghxcc9/: run-q8ghxcc9.wandb
wandb/run-20260119_122400-o9xnth4p/: run-o9xnth4p.wandb
wandb/run-20260119_123511-guufypa6/: run-guufypa6.wandb
wandb/run-20260120_140051-h2ns9277/: run-h2ns9277.wandb
wandb/run-20260120_140448-h1apuhqb/: run-h1apuhqb.wandb
wandb/run-20260120_215932-yjgbd8ig/: run-yjgbd8ig.wandb
wandb/run-20260120_220006-hbyk7gvq/: run-hbyk7gvq.wandb
wandb/run-20260121_102037-ck5htr5g/: run-ck5htr5g.wandb
wandb/run-20260121_103130-3fyktfvq/: run-3fyktfvq.wandb
wandb/run-20260121_131945-cc33uf43/: run-cc33uf43.wandb
wandb/run-20260121_132324-mtumyr3v/: run-mtumyr3v.wandb
wandb/run-20260121_174629-rxdma9un/: run-rxdma9un.wandb
wandb/run-20260122_092630-mplvp25f/: run-mplvp25f.wandb
wandb/run-20260122_125922-07kb3sm5/: run-07kb3sm5.wandb
wandb/run-20260122_130724-o4kqo90m/: run-o4kqo90m.wandb
wandb/run-20260122_134655-u239phvg/: run-u239phvg.wandb
wandb/run-20260122_145515-p6wdutgu/: run-p6wdutgu.wandb
wandb/run-20260122_145706-tmxsjvyq/: run-tmxsjvyq.wandb
wandb/run-20260122_150218-bw0rjo0n/: run-bw0rjo0n.wandb
wandb/run-20260122_150609-avskjutu/: run-avskjutu.wandb
wandb/run-20260122_164756-lbqjtj6t/: run-lbqjtj6t.wandb
wandb/run-20260122_164905-msfmfeys/: run-msfmfeys.wandb
wandb/run-20260122_181000-pg1qgimn/: run-pg1qgimn.wandb
wandb/run-20260122_181059-vu1daa1r/: run-vu1daa1r.wandb
wandb/run-20260122_181151-wdame92z/: run-wdame92z.wandb
wandb/run-20260122_181222-bzt6z92o/: run-bzt6z92o.wandb
wandb/run-20260122_182449-p4iju8ig/: run-p4iju8ig.wandb
wandb/run-20260122_182521-wdqlqdy7/: run-wdqlqdy7.wandb
wandb/run-20260122_215232-ibgzwm3x/: run-ibgzwm3x.wandb
wandb/run-20260122_215350-d96cq42h/: run-d96cq42h.wandb
wandb/run-20260122_220031-bn7r59lr/: run-bn7r59lr.wandb
wandb/run-20260122_220103-141vsipc/: run-141vsipc.wandb
wandb/run-20260122_220352-xwh4pgs8/: run-xwh4pgs8.wandb
wandb/run-20260122_220545-0z4bl0ky/: run-0z4bl0ky.wandb
wandb/run-20260122_220548-uhkih8by/: run-uhkih8by.wandb
wandb/run-20260122_220902-3qze89dm/: run-3qze89dm.wandb
wandb/run-20260122_221321-s3pziub2/: run-s3pziub2.wandb
wandb/run-20260123_100525-804dxu0b/: run-804dxu0b.wandb
wandb/run-20260123_100741-czs0zoav/: run-czs0zoav.wandb
wandb/run-20260123_101031-4gowy0pu/: run-4gowy0pu.wandb
wandb/run-20260123_102005-ovs9hflm/: run-ovs9hflm.wandb
wandb/run-20260123_102036-h1hi36w4/: run-h1hi36w4.wandb
wandb/run-20260123_102746-t551kl8x/: run-t551kl8x.wandb
wandb/run-20260123_102914-mqy7dwj7/: run-mqy7dwj7.wandb
wandb/run-20260123_103012-gmohd0pe/: run-gmohd0pe.wandb
wandb/run-20260123_103104-dm9bs17g/: run-dm9bs17g.wandb
wandb/run-20260123_103223-otm1mvg5/: run-otm1mvg5.wandb
wandb/run-20260123_103259-eo5y63ql/: run-eo5y63ql.wandb
wandb/run-20260123_103418-qk9wlbyw/: run-qk9wlbyw.wandb
wandb/run-20260123_103449-8fxrq4ro/: run-8fxrq4ro.wandb
wandb/run-20260123_103613-i5uu00tx/: run-i5uu00tx.wandb
(+262 files in other folders)
