[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "call_of_birds_autobird"
version = "0.0.1"
description = "mlops project - automatic bird call classifier"
authors = [
  { name = "group_47", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "invoke>=2.2.0",
    "matplotlib>=3.10.8",
    "numpy<2",
    "pandas>=2.3.3",
    "ruff>=0.1.3",
    "soundfile>=0.13.1",
    "torch<=2.2.2",
    "click<8.1",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "torchaudio>=2.2.2",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "torch-tb-profiler>=0.4.3",
    "snakeviz>=2.2.2",
    "google-api-python-client>=2.188.0",
    "dvc>=2.58.2",
    "dvc-gdrive>=3.0.1",
    "pathspec<1.0",
    "dvc-gs>=3.0.2",
    "wandb>=0.24.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "mypy>=1.19.1",
    "types-markdown>=3.10.0.20251106",
    "loguru>=0.7.3",
]

[project.scripts]
data_typer = "call_of_birds_autobird.data:app"
data = "call_of_birds_autobird.data:preprocess_hydra"
train = "call_of_birds_autobird.train:run_train"
test_train ="call_of_birds_autobird.test:app"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I" , "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
disable_error_code = ["import-untyped"]
